# taifex-quant-trading-platform

./: .env.example  .gitignore  .vercelignore  AGENTS.md  Makefile  README.md  docker-compose.yml  vercel.json
ai-module/: README.md
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/tests/: test_allocator.py  test_architecture_routes.py  test_audit_integrity.py  test_backtest_artifact.py  test_backtest_artifact_comparison.py  test_backtest_artifact_index.py  test_backtest_preview.py  test_backtest_research_bundle.py  test_backtest_research_bundle_index.py  test_backtest_result.py  test_continuous_futures.py  test_continuous_futures_preview_script.py  test_contracts.py  test_data_fixture_validation_script.py  test_data_platform.py  test_data_platform_migration_scripts.py  test_data_quality_report_persistence.py  test_data_version_registry_script.py  test_data_versions.py  test_exposure_allocator.py  test_feature_manifest.py  test_feature_manifest_script.py  test_health.py  test_hosted_backend_environment_routes.py  test_hosted_paper_auth_provider_selection_routes.py  test_hosted_paper_datastore_migration_plan_script.py  test_hosted_paper_datastore_readiness_routes.py  test_hosted_paper_environment_routes.py  test_hosted_paper_identity_access_contract_routes.py  test_hosted_paper_identity_readiness_routes.py  test_hosted_paper_mock_session_routes.py  test_hosted_paper_production_datastore_migration_plan_v2_script.py  test_hosted_paper_production_datastore_readiness_routes.py  test_hosted_paper_readiness_routes.py  (+39 more)
(+478 files in other folders)
